--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bot-Development-Kit",
+  "name": "Weather-Bot",
   "version": "0.0.5",
   "description": "Bot scaffold for refocus bot development",
   "url": "https://git.soma.salesforce.com/Refocus-Bots/refocus-bot-scaffold",
