--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test-dev": "nodemon --ext js --watch ./ --exec 'mocha ./test'"
   },
   "dependencies": {
-    "@salesforce/refocus-bdk": "file:./lib/salesforce-refocus-bdk-1.1.2.tgz",
+    "@salesforce/refocus-bdk": "file:./lib/salesforce-refocus-bdk-1.3.1.tgz",
     "dotenv": "4.0.0",
     "dotenv-webpack": "1.5.4",
     "express": "4.10.2",
@@ -58,9 +58,17 @@
   },
   "metadata": {
     "actions": [
+      {
+        "name": "getCurrentWeather",
+        "parameters": [
+          {
+            "name": "zipCode",
+            "type": "INTEGER"
+          }
+        ]
+      }
     ],
-    "data": [
-    ],
+    "data": [],
     "settings": [
       {
         "key": "dataName",
